<?xml version="1.0"?>
<package format = "2">
  <name>autonomous_exploration</name>
  <version>0.0.1</version>
  <description>The autonomous exploration package based on frontier and information
               gain based approach.</description>
  <maintainer email="zhouwk33@gmail.com">Kevin</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>opt_utils</depend>
  <depend>internal_grid_map</depend>
  <depend>path_transform_planner</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>car_model</depend>
  <depend>iv_explore_msgs</depend>

  <export>
  </export>
</package>
